k8s/infrastructure/auth/authentik/extra/kdc/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kdc
  annotations:
    io.cilium/lb-ipam-ips: 209.112.97.163,2001:67c:17fc:130::88
    external-dns.alpha.kubernetes.io/hostname: kerberos.lama-corp.space
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: kdc-tcp
      port: 88
      targetPort: kdc-tcp
      protocol: TCP
    - name: kdc-udp
      port: 88
      targetPort: kdc-udp
      protocol: UDP
    - name: kdc-kadmin
      port: 749
      targetPort: kdc-kadmin
      protocol: TCP
