k8s/infrastructure/auth/authentik/extra/kdc/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-kdc
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kdc
  ingress:
    - fromEntities:
        - world
    - toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
            - port: "8888"
              protocol: UDP
            - port: "8749"
              protocol: UDP
